usr.sbin/makefs/tests/makefs_ffs_tests.sh
@@ -57,7 +57,6 @@ check_ffs_image_contents()
 atf_test_case autocalculate_image_size cleanup
 autocalculate_image_size_body()
 {
-	atf_expect_fail "PR 229929 makefs(8) can underestimate image size"
 	create_test_inputs
 
 	atf_check -e empty -o save:$TEST_SPEC_FILE -s exit:0 \
